--- a/src/test/resources/configs.properties
+++ b/src/test/resources/configs.properties
@@ -1,5 +1,5 @@
 #Write Data to Properties file
-#Sun Mar 24 22:08:07 ICT 2024
+#Tue Oct 22 09:20:19 ICT 2024
 AUTHOR=Hai Yen
 BROWSER=chrome
 EXTENT_REPORT_PATH=report/ExtentReport/ExtentReport.html
@@ -16,5 +16,5 @@ URL=https\://cms.anhtester.com
 URL_ADMIN=https\://cms.anhtester.com/login
 VIDEO_RECORD=false
 VIDEO_RECORD_PATH=report/VideoRecords/
-product_P01=Cosy Hai Yen PZGYYVLY
+product_P01=Cosy Hai Yen CGWSQJTG
 product_P02=Adobe Premiere Elements 2022
